--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "yup": "^1.1.1"
   },
   "devDependencies": {
+    "@hookform/devtools": "^4.3.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
